--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3881,10 +3881,6 @@
 						background-color: transparent;
 					}
 
-				#header.alt {
-					padding: 0.5em 0 0.5em 1em;
-				}
-
 		}
 
 		@media screen and (max-width: 480px) {
